--- a/WebContent/presentation/cliente/style.css
+++ b/WebContent/presentation/cliente/style.css
@@ -2,6 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Arvo:700);
 @import url(https://fonts.googleapis.com/css?family=Seaweed+Script);
 
+
 body
 {
 	font-family: arial !important;
@@ -420,237 +421,86 @@ form{
 }
 
 
+/*css barra*/
+ 
 
 
+.search-container{
+  width: 490px;
+  display: block;
+  margin: 0 auto;
+}
 
-/* CSS DELLE PIZZE*/
-.divpizze{
-    width:auto; 
-    height:auto; 
-    margin-left:5%; 
-    margin-right:5%;
-    flex-flow:wrap;
+input#search-bar{
+  
+  width: 100%;
+  height: 45px;
+  padding: 0 20px;
+  font-size: 1rem;
+  border: 1px solid #D0CFCE;
+  outline: none;
+ margin:10px 10px 10px 10px;
+ }
+
+.search-icon{
+  position: relative;
+  float: right;
+  width: 75px;
+  height: 75px;
+  top: -70px;
+  right: -75px;
 }
-.pizza{
-    max-height:31%;
-    max-width:31%; 
-    background-color:#cba167;
-    min-height:250px;
-    min-width:250px;
-}
-.nomepizza{
-    background-color:#7a0018;
-    color:white;
-    font-family:Comic Sans MS,Comic Sans,cursive;
-    font-size:x-large;
-    font-weight:bold;
-    font-variant:normal;
-}
-.fotopizza{
-    background-color:#404040; 
-    padding:0rem;
-    flex: unset;
-}
-.imgpizza{
-    min-width:100%; 
-    min-height:100%; 
-    height:auto;
-}
-.pizza p{
-    text-align:left;
-    color:white;
-    font-size:medium; 
-    margin-right:5%;
-    margin-bottom:3%;
-}
-.pizza h4{
-    white-space:nowrap;
-    text-align:right;
-}
-.submitpizza{
-    float:left; 
-    width:auto; 
-   visibility:hidden;
-}
-@media (max-width:991.98px){
-    .submitpizza{
-        margin-left:-15px; 
+
+/*css carusel*/
+.multi-item-carousel{
+  .carousel-inner{
+    > .item{
+      transition: 500ms ease-in-out left;
     }
-}
-.quantita{
-    width:30px;
-}
-.dropdown-menu{
-    background-color:#7a0018;
-    width:auto;
-}
-.numberpizze{
-    width:3em; 
-    text-align:right;
-}
-@media (min-width: 576px){
-    .pizza{
-        margin-top:50px;
+    .active{
+      &.left{
+        left:-33%;
+      }
+      &.right{
+        left:33%;
+      }
     }
-}
-
-@media (max-width:576px){
-    .abc{
-        visibility:hidden;
+    .next{
+      left: 33%;
     }
-    .buttonsubmit{
-        width:50px;
-        height:30px;
+    .prev{
+      left: -33%;
     }
-    .submitpizza{
-        margin-left:1%;
+    @media all and (transform-3d), (-webkit-transform-3d) {
+      > .item{
+        // use your favourite prefixer here
+        transition: 500ms ease-in-out left;
+        transition: 500ms ease-in-out all;
+        backface-visibility: visible;
+        transform: none!important;
+      }
     }
-}
-.buttonpiu, .buttonmeno{
-    margin-left:-5px;
-    display:inline;
-}
-
-
-
-.abc{
-	display:inline; 
-	font-family:sans-serif;
-}
-
-
-/*CSS DELLE BIBITE e DEGLI SFIZI*/
-.divbibite , .divsfizi{
-    width:auto; 
-    height:auto; 
-    margin-left:5%; 
-    margin-right:5%;
-    flex-flow:wrap;
-}
-.bibita, .sfizio{
-    max-height:23%;
-    max-width:23%;
-    background-color:#cba167;
-    min-height:250px;
-    min-width:250px;
-    margin-top:30px;
-}
-.nomebibita {
-    background-color:#7a0018;
-    color:white;
-    font-family:Comic Sans MS,Comic Sans,cursive;
-    font-size:x-large;
-    font-weight:bold;
-    font-variant:normal;
-}
-.nomesfizio{
-    background-color:#7a0018;
-    color:white;
-    font-family:Comic Sans MS,Comic Sans,cursive;
-    font-size:x-large;
-    font-weight:bold;
-    font-variant:normal;
-    height:97px;
-}
-.fotobibita , .fotosfizio{
-    background-color:#404040; 
-    padding:0rem;
-    flex: unset;
-}
-.imgbibita , .imgsfizio{
-    min-width:100%; 
-    min-height:100%; 
-    height:auto;
-}
-.dropdownprodotto{
-    background-color:#cba167; 
-    box-sizing:border-box;
-}
-.bibita p , .sfizio p{
-    text-align:left;
-    color:white;
-    font-size:medium; 
-    margin-right:5%;
-    margin-bottom:3%;
-}
-.bibita h4 , .sfizio h4{
-    white-space:nowrap;
-    text-align:right;
-}
-.submitbibita , .submitsfizio{
-    float:left; 
-    width:auto; 
-    margin-right:10px;
-   visibility:hidden;
-}
-@media (max-width:991.1px){
-    .submitbibita{
-        margin-left:-15px; 
+  }
+  .carouse-control{
+    &.left, &.right{
+      background-image: none;
     }
+  }
 }
-#quantita{
-    width:30px;
-}
-.dropdown-menu{
-    background-color:#7a0018;
-    width:auto;
-}
-.numberbibita{
-    width:3em; 
-    text-align:right;
+
+// non-related styling:
+
+h1{
+  color: white;
+  font-size: 2.25em;
+  text-align: center;
+  margin-top: 1em;
+  margin-bottom: 2em;
+  text-shadow: 0px 2px 0px rgba(0, 0, 0, 1);
 }
 
 
-@media (max-width:1440px){
-    .abc{
-        visibility:hidden;
-    }
-    .buttonsubmit{
-        width:50px;
-        height:30px;
-    }
-    .submitbibita{
-        margin-left:1%;
-    }
-}
-.buttonpiumeno{
-    margin-left:-5px;
-}
 
-
-@media (max-width:991.1px){
-    .submitsfizio{
-        margin-left:-15px; 
-    }
-}
-#quantita{
-    width:30px;
-}
-.dropdown-menu{
-    background-color:#7a0018;
-    width:auto;
-}
-.numbersfizio{
-    width:3em; 
-    text-align:right;
-}
-
-
-@media (max-width:1440px){
-    .abc{
-        visibility:hidden;
-    }
-    .buttonsubmit{
-        width:50px;
-        height:30px;
-    }
-    .submitsfizio{
-        margin-left:1%;
-    }
-}
-.buttonpiumeno{
-    margin-left:-5px;
-}
 
 
 
