--- a/WebContent/presentation/cliente/styleCliente2.css
+++ b/WebContent/presentation/cliente/styleCliente2.css
@@ -6,7 +6,7 @@
 body
 {
 	font-family: arial !important;
-	background-color: #00dd6f!important;
+	background-color: #c0c0c0!important;
 }
 
 header{
@@ -359,25 +359,21 @@ media-heading h2{
 }
 
 .preferiti-immagine{
-	width:25%;
-	height:100%;
+	min-width:10%;
 }
 
 .container-preferiti2{
-	float:right;
-	width:75%;
-	height:100%;
-	display:block;
+	position:relative;
 }
 
-.intestazione-preferiti{
-	display:flex;
+.intestazione-preferiti h2{
+	display:inline;
 }
 
 .descrizione-preferiti{
 	height:auto;
-	width:75%;
-}
+	width:100%;
+	}
 
 
 
