--- a/WebContent/presentation/cliente/styleCliente2.css
+++ b/WebContent/presentation/cliente/styleCliente2.css
@@ -320,12 +320,16 @@ media-heading h2{
 .container-preferiti{
 	margin-left:5%;
 	margin-right:5%;
-	display:flex;
+	display:block;
 	
 }
 
 .preferiti-immagine{
-	min-width:10%;
+	float: left;
+}
+
+.preferiti-immagine img{
+	max-width: 100px;
 	max-height: 150px;
 }
 
@@ -483,6 +487,7 @@ media-heading h2{
 /*Css visaulizza libro*/
 
 .container-visualizza-libro{
+	margin-top: 1%;
 	margin-left:5%;
 	margin-right:5%;
 	display:flex;
@@ -491,13 +496,18 @@ media-heading h2{
 }
 
 .visualizza-libro-immagine{
-	min-width:10%;
-	max-height: 150px;
-}
-.visualizza-libro-immagine img{
-	width:100%; height:100%;
+	margin-right: 1%;
 }
 
+.visualizza-libro-immagine img{
+	max-height: 400px; 
+}
+
+#star-preferiti{
+	witdh:34px;
+	height:34px;
+	float:right;
+}
 
 .container-visualizza-libro2{
 	position:relative;
@@ -506,10 +516,7 @@ media-heading h2{
 .intestazione-visualizza-libro h2{
 	display:inline;
 }
-.intestazione-visualizza-libro img{
-	witdh:34px;
-	height:34px;
-}
+
 .intestazione-preferiti h4{
 	float:right;
 }
