Revisione css amministratore

--- a/WebContent/presentation/amministratore/styleAmministratore.css
+++ b/WebContent/presentation/amministratore/styleAmministratore.css
@@ -110,8 +110,9 @@ header{
 	 display:inline-block;
 }
 
-.search-container input{
-	width:90%;
+form{
+	width:50%;
+	margin-top:0.1%;
 }
 
 .container-cerca selcet{
@@ -133,3 +134,39 @@ header{
 	 width:300px;
 	 margin-left:40%;
 }
+
+
+/* css catalogo*/
+.container-libri-trovati{
+	width:90%;
+	margin-top:3%;
+	margin-left:5%;
+	margin-right:5%;
+	margin-bottom:2%;
+	position:relative;
+	background-color:mintcream;
+}
+
+.immagine-libro-trovato{
+	width:20%;
+	height:100%;
+}
+.immagine-libro-trovato img{
+	width:100%;
+}
+
+.container-informazioni-libro{
+	position:absolute;
+	top:0;
+	right:0;
+	width:80%;
+}
+
+.container-informazioni-libro h5{
+	font-weight:bold;
+	}
+
+
+.container-informazioni-libro h6{
+	font-family:cursive;
+	}
