--- a/WebContent/presentation/cliente/styleCliente2.css
+++ b/WebContent/presentation/cliente/styleCliente2.css
@@ -205,8 +205,12 @@ center img{
     display: block;
     text-align: left;
   }
-    
+     
 
+}
+
+.preferito-mio{
+	pointer-events:none;
 }
 
 .container{
